Preconnect to gravatar

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="ROBOTS" content="INDEX, FOLLOW">
     <meta name="description" content="Website des Elite12-Musikbots">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="preconnect" href="//www.gravatar.com">
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
