--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Elite12 Musikbot</title>
+    <script type="text/javascript" src="%PUBLIC_URL%/config.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
